# Wechatmulti

./: Cargo.toml  README.md  wechat.vbs
.github/workflows/: release.yml
src/: main.rs
