[package]
name = "wechatmult"
version = "0.1.0"
edition = "2024"
description = "WeChat multi-instance helper tool"

[dependencies]
anyhow = "1.0"
ntapi = "0.4"
widestring = "1.1"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
strip = true
lto = true